Fixed weird flickering.

--- a/index.css
+++ b/index.css
@@ -72,6 +72,7 @@ body {
     padding: 6px;
     align-items: flex-end;
     flex-direction: row;
+    width: 100%;
     
 }
 
